Show collapsed menu -when menu was collapsed on responsive, it wasn't expanding back when scaled to large. -this was fixed by modifying the .collapse:not(.show) class in the stylesheet

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -21,6 +21,7 @@ body {
 
 body.container-fluid {
   margin: 0 auto;
+  padding: 0;
 }
 
 .image {
@@ -114,12 +115,11 @@ div.left, div.right, div.middle {
   width: 30%;
 }
 
-main.container-fluid {
-  margin: 0 auto;
-  max-width: 1310px;
+main.container {
+  margin: 0 10px;
+  margin-top: 20px;
+  max-width: 100%;
   background-color: #fff;
-  padding-top: 20px;
-  margin: 0 auto;
 }
 
 a {
@@ -370,6 +370,10 @@ footer img.footer-icon {
   .navbar-toggler {
     display: none;
   }
+
+  .collapse:not(.show) {
+    display: block;
+  }
 }
 
 @media screen and (max-width: 991px) {
@@ -400,5 +404,6 @@ footer img.footer-icon {
     right: 10px;
     top: 10px;
   }
+
 
 }
